<resources>
    <string name="app_name">LibraryManagmentSystem</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="login">Login</string>
    <string name="upload_book">Upload Book</string>
    <string name="update_book">Update Book</string>
    <string name="membership">membership</string>
    <string name="delete">Delete</string>
    <string name="update_member">Update Member</string>
</resources>